# py-monolith-showcase

./: .dockerignore  .gitignore  Dockerfile  README.md  bdracheck.json  bdracheck.py  pyproject.toml  python_showcase_app_testing.txt
.github/workflows/: bdracheck.yaml
app/: __init__.py  main.py
app/internal/: __init__.py
app/internal/ring0/protected/: context.py  ports.py
app/internal/ring0/public/: postgres.py
app/internal/ring0/pure/: tenant.py  user.py
app/internal/ring1/billing/: __init__.py
app/internal/ring1/billing/protected/: __init__.py
app/internal/ring1/billing/public/: __init__.py  http_adapter.py
app/internal/ring1/billing/pure/: __init__.py  invoice.py
app/internal/ring1/health/: __init__.py  health.py
app/internal/ring1/protected/: ports.py
app/internal/ring1/public/: http_adapter.py  order_dashboard.py  resilient_repo.py
app/internal/ring1/pure/: order.py
app/internal/ring2/: __init__.py
app/internal/ring2/protected/: ports.py
app/internal/ring2/public/: workers.py
app/internal/ring2/pure/: risk.py
tests/: test_api_delivery.py  test_architecture.py  test_chaos_resiliency.py
tests/ring0/: test_user_invariants.py
tests/ring1/: test_invoice_invariants.py  test_order_invariants.py  test_resilient_repo.py
